# web-scraping-er-v2

./: .gitignore  README.md  currency_country_map.yaml  last_run.txt  last_runtime.txt  pyproject.toml
.github/workflows/: daily_run.yaml
maps/: subscription_map.yaml
src/common/: utils.py
src/discord_integration/: send_message.py
src/web_scraping_er_v2/: __main__.py  currency_map.py  load_to_bq.py  maps.py  pipeline.py
